@@ -2171,7 +2171,7 @@ gdk_export BAT *BAThash(BAT *b, BUN masksize);
 
 /* low level functions */
 
-#define BATprepareHash(X) (((X)->H->hash == NULL) && !BAThash(X, 0))
+#define BATprepareHash(X) (((X)->T->hash == NULL) && !BAThash((X), 0))
 
 /*
  * @- Column Imprints Functions
