@@ -141,7 +141,7 @@
 		BATiter ri = bat_iterator(r);				\
 									\
 		ALGODEBUG fprintf(stderr, "#BATins_%s%s: hashcheck[%s, %s, %s, %s, k];\n", #a1, #a2, #a1, #a2, #a3, #a4); \
-		if (BATprepareHash(r)) {				\
+		if (BATprepareHash(BATmirror(r))) {			\
 			goto bunins_failed;				\
 		}							\
 		BATloop(l, p1, q1) {					\
